--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,23 +1,29 @@
 name: flutter_food_delivery
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ^3.5.0
+    sdk: ^3.5.0
 
 dependencies:
-  flutter:
-    sdk: flutter
-  get: ^4.6.6
-  http: ^1.2.2
-  cupertino_icons: ^1.0.6
-  provider: ^6.1.2
+    flutter:
+        sdk: flutter
+    get: ^4.6.6
+    http: ^1.2.2
+    cupertino_icons: ^1.0.6
+    provider: ^6.1.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^4.0.0
+    flutter_test:
+        sdk: flutter
+    flutter_lints: ^4.0.0
 
 flutter:
-  uses-material-design: true
+    uses-material-design: true
+    assets:
+        - lib/images/burgers/
+        - lib/images/desserts/
+        - lib/images/drinks/
+        - lib/images/salads/
+        - lib/images/sides/
