--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     http: ^1.2.2
     cupertino_icons: ^1.0.6
     provider: ^6.1.2
+    collection: ^1.19.0
 
 dev_dependencies:
     flutter_test:
