--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     provider: ^6.1.2
     collection: ^1.19.0
     flutter_credit_card: ^4.0.1
+    intl: ^0.20.1
 
 dev_dependencies:
     flutter_test:
