--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
     collection: ^1.19.0
     flutter_credit_card: ^4.0.1
     intl: ^0.20.1
+    firebase_core: ^3.10.0
+    firebase_auth: ^5.4.0
 
 dev_dependencies:
     flutter_test:
